--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Tactical Response City</title>
+   <title>Swift Response</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
    <style>
        body, html {
@@ -135,7 +135,7 @@
 
 <!-- Navigation Bar -->
 <div id="nav-bar">
-   <div id="nav-title">Tactical Response City</div>
+   <div id="nav-title">Swift Response</div>
    <div style="position: absolute; right: 30px;">
        <a href="{{ url_for('about') }}">About</a>
        <a href="{{ url_for('contact') }}">Contact</a>
