--- a/templates/contact.html
+++ b/templates/contact.html
@@ -83,23 +83,23 @@
     <div class="team">
         <div class="team-member">
             <h3>Andres Cardoso</h3>
-            <p>Lead Developer & Designer</p>
-            <p>Email: andres.cardoso@example.com</p>
+            <p>Lead Developer & Front-End Engineer</p>
+            <p>Email: cardoso2@usf.edu</p>
         </div>
         <div class="team-member">
-            <h3>Marvin Guerro</h3>
-            <p>Data Analyst & Researcher</p>
-            <p>Email: marvin.guerro@example.com</p>
+            <h3>Marvin Guerrero</h3>
+            <p>Algorithms & Research</p>
+            <p>Email: marving@usf.edu</p>
         </div>
         <div class="team-member">
             <h3>Rickny Sanon</h3>
-            <p>UI/UX Specialist</p>
-            <p>Email: rickny.sanon@example.com</p>
+            <p>Full Stack Engineer</p>
+            <p>Email: sanonrickny2@gmail.com</p>
         </div>
         <div class="team-member">
-            <h3>Sebastian</h3>
-            <p>Backend Developer</p>
-            <p>Email: sebastian@example.com</p>
+            <h3>Sebastian Falaschi</h3>
+            <p>Full Stack Developer</p>
+            <p>Email: sebas.fala@gmail.com</p>
         </div>
     </div>
 
