added something on the contacts
added Rick as front end

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -93,7 +93,7 @@
         </div>
         <div class="team-member">
             <h3>Rickny Sanon</h3>
-            <p>Full Stack Engineer</p>
+            <p>Full Stack Engineer & Front Front-End</p>
             <p>Email: sanonrickny2@gmail.com</p>
         </div>
         <div class="team-member">
